# partialSynth

./: CMakeLists.txt
PartialSynth/: PartialSynth.h
PartialSynth-iOS-static/: PartialSynth_iOS_static.h  PartialSynth_iOS_static.m
PartialSynth.xcodeproj/: project.pbxproj
PartialSynth.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
PartialSynth.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: PartialSynth.xcscheme  xcschememanagement.plist
PartialSynthTests/: PartialSynthTests.mm
src/: BasePartial.hpp  BaseSynth.hpp  PartialParameter.hpp  ResPartial.cpp  ResPartial.hpp  ResSynth.cpp  ResSynth.hpp  SinePartial.cpp  SinePartial.hpp  SineSynth.cpp  SineSynth.hpp
